--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -137,23 +137,84 @@ hr{
   border: solid rgba(148, 148, 148, 0.418) 1px;
 }
 
-hr.title-bottom-line{
-  border: solid var(--c-1) 1px;
-}
 
 // * markdown content
+
+.header-cont{
+  background-color: #50421e;
+}
 .markdown-title{
   font-size: 3em;
   background-color: #50421e;
-  background:
-  linear-gradient(63deg, var(--c-head) 23%, transparent 23%) 7px 0,
-  linear-gradient(63deg, transparent 74%, var(--c-head) 78%),
-  linear-gradient(63deg, transparent 34%, var(--c-head) 98%, #29270f 58%, transparent 62%),
-  #444;
-  background-size: 16px 48px;
 
   padding: .1em;
-  margin-bottom: 15px;
-  border-radius: 10px 10px / 20px;
-  // filter: blur(3px);
+  padding-top: 1em;
+
+  margin: 0;
+
+
+  position: relative;
+
+  &::after {
+    content: "";
+    background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 .15 .9" preserveAspectRatio="none"><polygon style="fill: yellow;" points="1,0 .2,1 0,1 "/></svg>');
+    background-size: 30px 30px;
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    bottom: 0px;
+    right: 0;
+    z-index: 2;
+  }
+
+  // &::after {
+  //   content: " ";
+  //   display: block;
+  //   position: relative;
+  //   top: 0px;
+  //   left: 0px;
+  //   width: 100%;
+  //   height: 36px;
+  //   background: linear-gradient(#2B3A48 0%, transparent 0%), linear-gradient(135deg, #272220 33.33%, transparent 33.33%) 0 0%, #272220 linear-gradient(45deg, #272220 33.33%, #2B3A48 33.33%) 0 0%;
+  //   background-repeat: repeat-x;
+  //   background-size: 0px 100%, 9px 27px, 9px 27px;
+  // }
+}
+
+hr.title-bottom-line{
+  border: solid var(--c-1) 1px;
+  margin-top: 0;
+
+}
+
+.frontmatter{
+  opacity: .6;
+}
+
+.searchbar-cont{
+  display: flex;
+
+  input{
+    flex-grow: 1;
+  }
+}
+
+// left side bar nav
+.navsidebar-cont{
+  border-right: solid rgb(59, 59, 59) 1px;
+  background-color: #1d1b1a;
+  box-shadow: #000000 -10px 3px 10px inset;
+
+  ul{
+    list-style: none;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+
+    li{
+      padding: 1em 0;
+      text-align: center;
+    }
+  }
 }
