rudimentary tree nav

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -265,7 +265,7 @@ ul.folder-contents{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  // margin: 0 auto;
 
   .content-cont{
     flex-grow: 1;
