--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,11 @@
   --c-quote: #a69020;
   --c-bg: #242424;
   --c-head: #332f19;
+  --c-strike: #808080;
+
+  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  // font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body{
@@ -23,17 +28,20 @@ body{
   background: transparent;
   width: 5px;
   height: 10px;
+  z-index: 999999;
 }  
   
 ::-webkit-scrollbar-track { 
 	// box-shadow: inset 0 0 5px grey; 
   background: rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
+  z-index: 999999;
 }  
   
 ::-webkit-scrollbar-thumb {  
 	background:var(--c-1);  
 	border-radius: 20px;
+  z-index: 999999;
 }
 
 strong{
@@ -69,7 +77,7 @@ a{
   transition: .3s;
 }
 a:hover{
-  opacity: .7;
+  opacity: .6;
 }
 
 /* pre:has(code){
@@ -98,8 +106,8 @@ body {
   background-color: var(--c-bg);
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 // * move this to other script later
@@ -123,17 +131,15 @@ a {
 }
 
 
-
-a:hover{
-  color: var(--c-2);
-}
-
 .tag{
   background-color: var(--c-2);
   margin-right: .3em;
   padding: 0 1em;
 }
 
+strike{
+  color: var(--c-strike);
+}
 
 
 * {
@@ -228,47 +234,8 @@ hr.title-bottom-line{
   }
 }
 
-// left side bar nav
-.navsidebar-cont{
-  border-right: solid rgb(59, 59, 59) 1px;
-  background-color: #1d1b1a;
-  box-shadow: #000000 -10px 3px 10px inset;
-  min-width: 5em;
-  transition: .3s;
-
-  nav{
-    position: sticky;
-    top: 0;
-    left: 0;
-  }
-
-  ul{
-    list-style: none;
-    padding: 0;
-
-    display: flex;
-    flex-direction: column;
-    font-size: 25px;
-
-    li{
-      padding: 1em 0;
-      text-align: center;
-    }
-  }
-}
-
-ul.folder-contents{
-  list-style: none;
 
 
-  li{
-    margin-bottom: .2em;
-    svg{
-      font-size: 20px;
-      margin-right: .3em;
-    }
-  }
-}
 
 //* LAYOUT
 .layout-wrap{
@@ -280,11 +247,18 @@ ul.folder-contents{
 
   .content-cont{
     flex-grow: 1;
+    // height: 100vh;
   }
 
   footer{
     width: 100%;
   }
+}
+
+.horizontal-wrap{
+  display: flex;
+  height: 100vh;
+  margin-right: auto;
 }
 
 // * TABLES
@@ -318,4 +292,10 @@ table{
       }
     }
   }
+}
+
+.contains-task-list{
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
 }
