footer top margin tweak

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -248,6 +248,7 @@ hr.title-bottom-line{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 15em;
   // margin: 0 auto;
 
   .content-cont{
