decent looking images that can size

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -248,7 +248,6 @@ hr.title-bottom-line{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 15em;
   // margin: 0 auto;
 
   .content-cont{
@@ -258,6 +257,7 @@ hr.title-bottom-line{
 
   footer{
     width: 100%;
+    margin-top: 15em;
   }
 }
 
@@ -316,6 +316,47 @@ ul.folder-contents{
     svg{
       font-size: 20px;
       margin-right: .3em;
+    }
+  }
+}
+
+// * IMAGES
+.imgWrapper{
+  transition: 1s;
+  display: inline-flex;
+  flex-direction: column;
+  cursor: zoom-in;
+  
+  // img cont
+  > span{ 
+    outline: solid rgb(80, 80, 80) 1px;
+    box-shadow: #000000 1px 1px 4px 2px;
+    transition: inherit;
+  }
+
+  small.caption{
+    color: grey;
+    display: inline-table;
+    text-align: end;
+    padding: 1em .5em;
+    transition: inherit;
+
+    span{
+      padding: 1em .5em;
+    }
+  }
+
+  &:hover{
+    > span{
+      outline: dotted rgb(154, 154, 154) 1px;
+      box-shadow: #000000a8 2px 2px 11px 5px;
+    }
+
+    small.caption{
+      span{
+        background-color: #303a00;
+        color: rgb(204, 204, 204);
+      }
     }
   }
 }
