md images and sizing working

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -325,6 +325,7 @@ ul.folder-contents{
   transition: 1s;
   display: inline-flex;
   flex-direction: column;
+  margin: .5em;
   cursor: zoom-in;
   
   // img cont
