--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,48 +1,24 @@
 // @import "./theme";
 
+:root{
 
-body{
-  background-color: var(--c-bg) ;
-  background-color: env(NEXT_PUBLIC_STYLE_ACCENT) ;
-  overflow: overlay;
-}
-
-/* width */  
-::-webkit-scrollbar { 
-  background: transparent;
-  width: 5px;
-  height: 10px;
-  z-index: 999999;
-}  
+  --c-nav: #4d6454;
+  --c-dark: #ffffff;
+  --c-light: #000000;
+  --c-code: #282c34;
+  --c-code-txt: #cccbbe;
+  --c-bg: #4d6454;
+  --c-head: #332f19;
+  --c-strike: #808080;
+  /* --c-strike: #000ced; */
   
-::-webkit-scrollbar-track { 
-	// box-shadow: inset 0 0 5px grey; 
-  background: rgba(0, 0, 0, 0.2);
-	border-radius: 10px;
-  z-index: 999999;
-}  
-  
-::-webkit-scrollbar-thumb {  
-	background:var(--c-1);  
-	border-radius: 20px;
-  z-index: 999999;
+  --width-cont: 1000px;
+
+  font-size: 14px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-strong{
-  font-size: large;
-  color: var(--c-bold);
-}
 
-i{
-  color: rgb(179, 179, 179);
-}
-
-code{
-  background-color: var(--c-code);
-  color: var(--c-code-txt);
-  border-radius: 5px;
-  padding: 0 .5em;
-}
 
 h2, h3 {
   scroll-margin-top: 16px;
@@ -57,12 +33,12 @@ h2, h3 {
 }
 
 a{
-  color: var(--c-1);
+  color: var(--c-3);
   transition: .3s;
   text-decoration: dotted;
 }
 a:hover{
-  opacity: .6;
+  opacity: .1;
 }
 
 /* pre:has(code){
@@ -82,69 +58,11 @@ blockquote{
   margin: 0;
 } */
 
-*{
-  transition: .1s;
-}
-
-html,
-body {
-  background-color: var(--c-bg);
-  padding: 0;
-  margin: 0;
-  // font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  //   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
 
 // * move this to other script later
 
-a {
-  color: var(--c-1);
-  /* text-decoration: none; */
-
-  &.btn--Med{
-    background-color: var(--c-1);
-    color: var(--c-dark);
-    display: block;
-    border: solid var(--c-1) 2px;
-    border-radius: 5px;
-    width: 7em;
-    padding: .2em;
-    margin-bottom: 1em;
-    text-align: center;
-    text-decoration: none;
-  }
-}
 
 
-.tag{
-  background-color: var(--c-2);
-  margin-right: .3em;
-  padding: 0 1em;
-}
-
-li.task-list-item:has(input:checked){
-  opacity: .6;
-  text-decoration:line-through;
-}
-
-strike{
-  color: var(--c-strike);
-}
-
-
-* {
-  box-sizing: border-box;
-}
-
-section {
-  padding: 1em;
-  margin: 1em 0;
-  background-color: var(--color-bg);
-}
-
-button {
-  cursor: pointer;
-}
 
 .pressStart{
   a{
@@ -153,22 +71,6 @@ button {
     padding: .3em;
     font-size: 3em;
   }
-}
-
-
-/* TODO look into dark / light auto switch */
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    /* background: black; */
-  }
-} 
-
-hr{
-  border: solid rgba(148, 148, 148, 0.418) 1px;
 }
 
 // * right aside - graph & table
@@ -180,182 +82,10 @@ aside .GraphNTable{
 
 // * markdown content
 
-.header-cont{
-  background-color: #50421e;
-}
-.markdown-title{
-  font-size: 3em;
-  background-color: #50421e;
-
-  padding: .1em;
-  padding-top: 1em;
-
-  margin: 0;
-
-
-  position: relative;
-
-  &::after {
-    content: "";
-    background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 .15 .9" preserveAspectRatio="none"><polygon style="fill: yellow;" points="1,0 .2,1 0,1 "/></svg>');
-    background-size: 30px 30px;
-    width: 100%;
-    height: 30px;
-    position: absolute;
-    bottom: 0px;
-    right: 0;
-    z-index: 2;
-  }
-
-  // &::after {
-  //   content: " ";
-  //   display: block;
-  //   position: relative;
-  //   top: 0px;
-  //   left: 0px;
-  //   width: 100%;
-  //   height: 36px;
-  //   background: linear-gradient(#2B3A48 0%, transparent 0%), linear-gradient(135deg, #272220 33.33%, transparent 33.33%) 0 0%, #272220 linear-gradient(45deg, #272220 33.33%, #2B3A48 33.33%) 0 0%;
-  //   background-repeat: repeat-x;
-  //   background-size: 0px 100%, 9px 27px, 9px 27px;
-  // }
-}
-
-hr.title-bottom-line{
-  border: solid var(--c-1) 1px;
-  margin-top: 0;
-
-}
-
-.frontmatter{
-  opacity: .6;
-}
-
-
-
-
-
-
-//* LAYOUT
-.layout-wrap{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  // margin: 0 auto;
-
-  .content-cont{
-    flex-grow: 1;
-    // height: 100vh;
-  }
-
-  footer{
-    width: 100%;
-    margin-top: 15em;
-  }
-}
-
-.horizontal-wrap{
-  display: flex;
-  height: 100vh;
-  margin-right: auto;
-}
-
-// * TABLES
-table{
-  width: 100%;
-  border-bottom: 2px solid var(--c-3);
-
-  thead{
-    background-color: var(--c-3);
-    color: var(--c-1);
-    tr{
-
-      th{
-        padding: .5em;
-        border-bottom: 2px solid var(--c-1);
-      }
-    }
-  }
-
-  tbody{
-    tr{
-      &:nth-child(even){
-        background-color: rgba(255, 255, 255, 0.096);
-      }
-      
-      &:hover{
-        background-color: rgba(255, 255, 0, 0.123);
-      }
-      td{
-        padding: .3em;
-      }
-    }
-  }
-}
-
 .contains-task-list{
   list-style: none;
   padding-left: 0;
   margin-top: 0;
 }
 
-ul, ol{
-  li{
-    margin-bottom: .4em;
-  }
-}
-ul.folder-contents{
-  list-style: none;
-  
-  
-  li{
-    margin-bottom: .2em;
-    svg{
-      font-size: 20px;
-      margin-right: .3em;
-    }
-  }
-}
 
-// * IMAGES
-.imgWrapper{
-  transition: 1s;
-  display: inline-flex;
-  flex-direction: column;
-  margin: .5em;
-  cursor: zoom-in;
-  
-  // img cont
-  > span{ 
-    outline: solid rgb(80, 80, 80) 1px;
-    box-shadow: #000000 1px 1px 4px 2px;
-    transition: inherit;
-  }
-
-  small.caption{
-    color: grey;
-    display: inline-table;
-    text-align: end;
-    padding: 1em .5em;
-    transition: inherit;
-
-    span{
-      padding: 1em .5em;
-    }
-  }
-
-  &:hover{
-    > span{
-      outline: dotted rgb(154, 154, 154) 1px;
-      box-shadow: #000000a8 2px 2px 11px 5px;
-    }
-
-    small.caption{
-      span{
-        background-color: #303a00;
-        color: rgb(204, 204, 204);
-      }
-    }
-  }
-}
